Fix notification style, remove whitespaces

--- a/client/Framework/themes/default/kd.styl
+++ b/client/Framework/themes/default/kd.styl
@@ -365,13 +365,13 @@ h4.kdheaderview
     color             white
     font-size         24px
     line-height       36px
-    margin-bottom     8px
     font-weight       bold
-    
+
   .kdnotification-content
+    margin-top        8px
     font-size         12px
     color             white
-    
+
   .kdnotification-timer
     position          absolute
     top               21px
@@ -427,7 +427,7 @@ h4.kdheaderview
       bg                  position, -80px -540px
       sprite()
       &:hover
-        text-shadow       0 1px 0 #444        
+        text-shadow       0 1px 0 #444
     &.mini
       padding             5px 25px 5px 5px
       rounded             5px
